--- a/index.html
+++ b/index.html
@@ -51,13 +51,12 @@
                 <br/>
                 <a href="#about" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b--white-40 white-80 link pam hover-link">Learn More</a>
                 <!-- <a href="#contact" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b\-\-white-40 white-80 link pam">Contact Us</a> -->
-                <!-- <a href="#" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b\-\-white-40 white-80 link pam">Secondary Call to Action</a> -->
             </div>
         </header>
         <main class="">
             <section id="about" class="">
                 <div class="measure center pvl phm ">
-                    <div class="h-at">
+                    <div class="">
                         <div class="">
                             <h1 class="f3 f2-ns semibold ttu tracked lh-title tal">Kyma</h1>
                             <hr/>
@@ -87,9 +86,9 @@
                         </div>
                     </div>
                     <hr/>
-                    <div class="fl w-100 mvxxl h-at">
+                    <div class="fl w-100 mvxxl ">
                         <div class="step tc">
-                            <span class="mega">1</span><h1 class="f3 tracked ttu">Uncover and Identify Target Audience</h1>
+                            <span class="f2">1</span><h1 class="f3 tracked ttu">Uncover and Identify Target Audience</h1>
                             <p>
                                 KYMA International excels in seeking and identifying new and growing markets as well as identifying key competitors within existing markets.
                             </p>
@@ -98,7 +97,7 @@
                             <span class="mega"><i class="fa fa-arrow-down"></i></span>
                         </div>
                         <div class="step tc">
-                            <span class="mega">2</span><h1 class="f3 tracked ttu">Pursue and Connect with Target Market</h1>
+                            <span class="f2">2</span><h1 class="f3 tracked ttu">Pursue and Connect with Target Market</h1>
                             <p>
                                 Specialising in connecting with and reaching out to potential customers as well as building lasting relationships with the complete supply chain
                             </p>
@@ -107,7 +106,7 @@
                             <span class="mega"><i class="fa fa-arrow-down"></i></span>
                         </div>
                         <div class="step tc">
-                            <span class="mega">3</span><h1 class="f3 tracked ttu">Process and Solve Customer Needs</h1>
+                            <span class="f2">3</span><h1 class="f3 tracked ttu">Process and Solve Customer Needs</h1>
                             <p>
                                 Identify needs and wants of customers to develop complete products, manufacturing, and management processes that deliver value to customers.
                             </p>
@@ -116,7 +115,7 @@
                             <span class="mega"><i class="fa fa-arrow-down"></i></span>
                         </div>
                         <div class="step tc ">
-                            <span class="mega">4</span><h1 class="f3 tracked ttu">Continuously work with customers to solve pain points and needs</h1>
+                            <span class="f2">4</span><h1 class="f3 tracked ttu">Continuously work with customers to solve pain points and needs</h1>
                             <p>
                                 Collect customer feedback and iterate with product teams to perfect the experience for current and future customers.
                             </p>
@@ -126,7 +125,7 @@
                 </div>
             </section>
         </main>
-        <section class="h-at" id="contact">
+        <section class="" id="contact">
             <div class="measure center tl tc-ns phm">
                 <h1 class="f4 f2-ns semibold ttu tracked lh-title tc">Contact Us:</h1>
                 <hr />
@@ -159,7 +158,7 @@
                     </div>
                     <label for="exampleMessage">Message:</label>
                     <textarea name="message" class="u-full-width contact-input--ma1 contact-input--mb1" placeholder="Hi Neil … (Please enter your phone number here and don't forget to leave your name!)" id="contactMessage"></textarea>
-                    <input type="hidden" name="_next" value="http://goexploring.today/kyma/thanks.html#contact" />
+                    <input type="hidden" name="_next" value="http://www.kymainternational.com/thanks.html#success" />
                     <input type="hidden" name="_subject" value="KYMA Form Submission!" />
                     <input type="submit" id="contact-submit" class="f5 f4-ns dim dib mtl br2 bg-white-10 ba b--black-40 black-80 link pam hover-link" value="Send" />
                 </form>
