--- a/thanks.html
+++ b/thanks.html
@@ -55,7 +55,7 @@
         <main class="">
             <section id="about" class="">
                 <div class="measure center pvl phm">
-                    <div class="h-100">
+                    <div class="">
                         <div class="">
                             <h1 class="f3 f2-ns semibold ttu tracked lh-title tal">Kyma</h1>
                             <hr/>
@@ -84,9 +84,9 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="fl w-100 mvxxl h-100">
+                    <div class="fl w-100 mvxxl ">
                         <div class="step tc">
-                            <span class="mega">1</span><h1 class="f1 tracked ttu">Uncover and Identify Target Audience</h1>
+                            <span class="f2">1</span><h1 class="f3 tracked ttu">Uncover and Identify Target Audience</h1>
                             <p>
                                 KYMA International excels in seeking and identifying new and growing markets as well as identifying key competitors within existing markets.
                             </p>
@@ -95,7 +95,7 @@
                             <span class="mega"><i class="fa fa-arrow-down"></i></span>
                         </div>
                         <div class="step tc">
-                            <span class="mega">2</span><h1 class="f1 tracked ttu">Pursue and Connect with Target Market</h1>
+                            <span class="f2">2</span><h1 class="f3 tracked ttu">Pursue and Connect with Target Market</h1>
                             <p>
                                 Specialising in connecting with and reaching out to potential customers as well as building lasting relationships with the complete supply chain
                             </p>
@@ -104,7 +104,7 @@
                             <span class="mega"><i class="fa fa-arrow-down"></i></span>
                         </div>
                         <div class="step tc">
-                            <span class="mega">3</span><h1 class="f1 tracked ttu">Process and Solve Customer Needs</h1>
+                            <span class="f2">3</span><h1 class="f3 tracked ttu">Process and Solve Customer Needs</h1>
                             <p>
                                 Identify needs and wants of customers to develop complete products, manufacturing, and management processes that deliver value to customers.
                             </p>
@@ -113,7 +113,7 @@
                             <span class="mega"><i class="fa fa-arrow-down"></i></span>
                         </div>
                         <div class="step tc ">
-                            <span class="mega">4</span><h1 class="f1 tracked ttu">Continuously work with customers to solve pain points and needs</h1>
+                            <span class="f2">4</span><h1 class="f3 tracked ttu">Continuously work with customers to solve pain points and needs</h1>
                             <p>
                                 Collect customer feedback and iterate with product teams to perfect the experience for current and future customers.
                             </p>
@@ -123,7 +123,7 @@
                 </div>
             </section>
         </main>
-        <section class="h-100" id="contact">
+        <section class="" id="contact">
             <div class="measure center tl tc-ns phm">
                 <h1 class="f4 f2-ns semibold ttu tracked lh-title">Contact Me:</h1>
                 <hr/>
@@ -147,7 +147,7 @@
                     <i class="fa fa-linkedin f2"></i> <a class="link" href="https://linkedin.com/in/hamlinn">hamlinn</a>
                 </div>
                 <hr/>
-                <h1 class="f4 f2-ns semibold ttu tracked lh-title v-mid">Submitted!</h1>
+                <h1 id="success" class="f4 f2-ns semibold ttu tracked lh-title v-mid">Submitted!</h1>
                 <div class="spacer-small"></div>
             </div>
         </section>
