--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <footer class="h-25 dt bg-cv" id="footer" style="background-image: linear-gradient(-45deg, #0074D9, #7FDBFF);">
             <div class="measure center pvl cf phm">
                 <p class="fl">
-                    &copy; 2016
+                    Built by <a href="https://matthamlin.me" class="link link--alt">Matt Hamlin</a> &copy; 2016
                 </p>
                 <p class="fr">
                     KYMA International
