--- a/thanks.html
+++ b/thanks.html
@@ -154,7 +154,7 @@
         <footer class="h-25 dt bg-cv" id="footer" style="background-image: linear-gradient(-45deg, #2ECC40, #7FDBFF);">
             <div class="measure center pvl cf phm">
                 <p class="fl">
-                    &copy; 2016
+                    Built by <a href="https://matthamlin.me" class="link link--alt">Matt Hamlin</a> &copy; 2016
                 </p>
                 <p class="fr">
                     KYMA International
