Adding some changes to the landing page

--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
                                 <li>
                                     Advanced Composites Technology
                                 </li>
+                                <li>
+                                    Import/Export Product Distrobution
+                                </li>
+                                <li>
+                                    Supply Resource Management
+                                </li>
                             </ul>
                         </div>
                     </div>
