--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                     Advanced Composites Technology
                                 </li>
                                 <li>
-                                    Import/Export Product Distrobution
+                                    Import/Export Product Distribution
                                 </li>
                                 <li>
                                     Supply Resource Management
