editing the base.js

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="msapplication-TileImage" content="/mstile-144x144.png">
         <meta name="theme-color" content="#0074d9">
+
+        <script type="text/javascript" src="./assets/js/base.js"></script>
     </head>
 
     <body class="wi-100 sans-serif">
