--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="KYMA" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./assets/css/skeleton/skeleton.css" />
-    <link rel="stylesheet" href="./node_modules/tachyons/css/tachyons.min.css" />
+    <link rel="stylesheet" href="./assets/css/tachyons.min.css" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"
