Use https instead of http:

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <a class="link" href="https://linkedin.com/in/hamlinn">hamlinn</a>
         </div>
         <hr />
-        <form class="v-mid" action="http://formspree.io/neil@kymainternational.com" method="POST">
+        <form class="v-mid" action="https://formspree.io/neil@kymainternational.com" method="POST">
           <div class="row">
             <div class="twelve columns">
               <label for="exampleEmailInput">Your email:</label>
